# iVol

./: .gitignore  CMakeLists.txt  README.md
res/: icons.qrc
src/: main.cpp  osxHelper.h  osxHelper.mm
src/algorithm/: volumemanager.cpp  volumemanager.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  transferfunctionwindow.cpp  transferfunctionwindow.h  transferfunctionwindow.ui
